Frontend(css for ReminderGallery.css still has a bug): - Add Navi zu Home in TipsPage.tsx - Change css for index.css, App.css, HomePage.css, Header.css, Footer.css, ReminderGallery.css - Bug is:: if too many Reminders, then the ReminderGallery will too long to see the Footer directly

--- a/frontend/src/page/HomePage.css
+++ b/frontend/src/page/HomePage.css
@@ -1,6 +1,8 @@
 .homepage{
-    flex: 1 0 auto;
+    /*flex: 1 0 auto;*/
     display: flex;
     flex-direction: column;
-    padding: 10px;
+    height: 100%;
+    /*padding: 10px;*/
+
 }
