--- a/frontend/src/page/TipsPage.css
+++ b/frontend/src/page/TipsPage.css
@@ -17,4 +17,8 @@
 
 .default-tips{
     display: flex;
+    flex-direction: column;
+    padding: 10px;
+    gap: 10px;
+
 }
